RESOLVED FIXED313649
REGRESSION(312211@main) [GTK] Broke copy/pasting relative URLs
https://bugs.webkit.org/show_bug.cgi?id=313649
Summary REGRESSION(312211@main) [GTK] Broke copy/pasting relative URLs
Vitaly Dyackhov
Reported 2026-04-29 06:51:54 PDT
Broken tests: editing/pasteboard/block-wrappers-necessary.html editing/pasteboard/copy-picture-and-text.html editing/pasteboard/copy-picture.html editing/pasteboard/copy-resolves-urls.html editing/pasteboard/copy-text-with-wrapped-tag.html editing/pasteboard/paste-4039777-fix.html editing/pasteboard/paste-noscript.html editing/pasteboard/reveal-selection-after-pasting-images.html Diff: ``` --- /sdk/webkit/layout-test-results/editing/pasteboard/copy-resolves-urls-expected.txt +++ /sdk/webkit/layout-test-results/editing/pasteboard/copy-resolves-urls-actual.txt @@ -2,4 +2,4 @@ link link -<a href="../relative/path/foo.html">link</a><img src="resources/abe.png"> +<a href="file:///sdk/webkit/LayoutTests/editing/relative/path/foo.html">link</a><img src="file:///sdk/webkit/LayoutTests/editing/pasteboard/resources/abe.png"> ```
Attachments
Vitaly Dyackhov
Comment 1 2026-04-29 06:54:33 PDT
Test gardening pull request: https://github.com/WebKit/WebKit/pull/63893
EWS
Comment 2 2026-04-29 06:56:42 PDT
Test gardening commit 312277@main (bb013742ee86): <https://commits.webkit.org/312277@main> Reviewed commits have been landed. Closing PR #63893 and removing active labels.
Diego Pino
Comment 3 2026-05-20 13:27:20 PDT
EWS
Comment 4 2026-05-20 22:18:36 PDT
Committed 313644@main (f5376181a643): <https://commits.webkit.org/313644@main> Reviewed commits have been landed. Closing PR #65316 and removing active labels.
Radar WebKit Bug Importer
Comment 5 2026-05-20 22:19:12 PDT
Diego Pino
Comment 6 2026-05-21 02:24:25 PDT
In reply to this comment from Vitaly in the associated PR (https://github.com/WebKit/WebKit/pull/65316#issuecomment-4506061952) > @dpino I wonder how it works on Apple ports. In the PR that introduced the regression for WebKitGTK (https://github.com/WebKit/WebKit/pull/63451), the EWS WebKitGTK test bot shows several tests were failing. The PR was merged anyway, which is not great. That PR was a follow-up to this other commit in the remote branch 'origin/safari-7624-branch': ``` 31eb1554d216 2026-01-15 timothy@apple.com safari-web-extension url masking bypass. https://webkit.org/b/304155 rdar://problem/166499973 ``` Unfortunately, I don't have access to that bugzilla ticket. It seems to me this was an issue related to Safari and Web Extensions. I think the behavior for WebKitGTK should have been preserved (considering the change made several layout tests fail for WebKitGTK). BTW, WPE is also affected but right now WPE doesn't run 'editing/pasteboard' tests as they are marked as Skipped in WPE TestExpectations: ``` webkit.org/b/213131 editing/pasteboard [ Skip ] ```
Claudio Saavedra
Comment 7 2026-07-09 06:55:41 PDT
EWS
Comment 8 2026-07-09 08:09:36 PDT
Committed 305877.970@webkitglib/2.52 (2f3c815d65f9): <https://commits.webkit.org/305877.970@webkitglib/2.52> Reviewed commits have been landed. Closing PR #68998 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.