Cherry-pick 313644@main (f5376181a643). https://bugs.webkit.org/show_bug.cgi?id=313649

REGRESSION(312211@main) Re-introduce URL protocol check for WebKitGTK
    https://bugs.webkit.org/show_bug.cgi?id=313649

    Reviewed by Carlos Garcia Campos.

    After 312211@main, method 'resolveURLStringIfNeeded' always returns a
    complete URL for 'ResolveURLs::YesExcludingURLsForPrivacy'.

    This change made several tests regress for WebKitGTK since now 'href' or 'src'
    values equal to a full filesystem URL. Before 312211@main, an extra check
    returned a relative URL in case the URL's protocol was filesystem. This seems
    to be the correct behaviour for WebKitGTK.

    Reintroduce URL's protocol check, but only for WebKitGTK.

    * LayoutTests/platform/gtk/TestExpectations:
    * Source/WebCore/dom/Element.cpp:
    (WebCore::Element::resolveURLStringIfNeeded const):

    Canonical link: https://commits.webkit.org/313644@main

Canonical link: https://commits.webkit.org/305877.970@webkitglib/2.52